--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test11",
+  "name": "react-to-do-list",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-regenerator-runtime": "^6.5.0",
+    "bootstrap": "^4.0.0",
     "css-loader": "^0.28.4",
     "eslint": "^4.3.0",
     "eslint-plugin-react": "^7.1.0",
